force-app/main/default/objects/custom_create129__c/custom_create129__c.object-meta.xml
<CustomObject>
    <label>Custom created object129</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects129</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>