force-app/main/default/objects/custom_create129__c/fields/custom_create_129field517__c.field-meta.xml
<CustomField>
    <fullName>custom_create_129field517__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 129field517</label>
    <type>Checkbox</type>
</CustomField>